--- a/config/gqserver.conf
+++ b/config/gqserver.conf
@@ -1,5 +1,5 @@
 {
-"web_server_addr":"127.0.0.1:443",
-"key":"exampleconftest",
-"ticket_time_hint":3600
+"WebServerAddr":"127.0.0.1:443",
+"Key":"exampleconftest",
+"TicketTimeHint":3600
 }
