--- a/config/gqserver.conf
+++ b/config/gqserver.conf
@@ -1,5 +1,4 @@
 {
-"WebServerAddr":"127.0.0.1:4443",
-"Key":"exampleconftest",
-"TicketTimeHint":3600
+"WebServerAddr":"204.79.197.200:443",
+"Key":"exampleconftest"
 }
